<resources>
    <string name="app_name">VALQUIN</string>
    <string name="action_settings">Settings</string>
    <string name="database_name">midban</string>
    <string-array name="entity_classes">
        <item>com.cafedered.midban.entities.Configuration</item>
        <item>com.cafedered.midban.entities.Company</item>
        <item>com.cafedered.midban.entities.Contact</item>
        <item>com.cafedered.midban.entities.CustomerList</item>
        <item>com.cafedered.midban.entities.PartnerCategory</item>
        <item>com.cafedered.midban.entities.Partner</item>
        <item>com.cafedered.midban.entities.Synchronization</item>
        <item>com.cafedered.midban.entities.SynchronizationSummary</item>
        <item>com.cafedered.midban.entities.PaymentMode</item>
        <item>com.cafedered.midban.entities.AccountPaymentTerm</item>
        <item>com.cafedered.midban.entities.PickingType</item>
        <item>com.cafedered.midban.entities.ProductUl</item>
        <item>com.cafedered.midban.entities.ProductUomCateg</item>
        <item>com.cafedered.midban.entities.ProductUom</item>
        <item>com.cafedered.midban.entities.ProductTemplate</item>
        <item>com.cafedered.midban.entities.ProductCategory</item>
        <item>com.cafedered.midban.entities.ProductPackaging</item>
        <item>com.cafedered.midban.entities.ProductPartnerPrice</item>
        <item>com.cafedered.midban.entities.PartnerProduct</item>
        <item>com.cafedered.midban.entities.Product</item>
        <item>com.cafedered.midban.entities.User</item>
        <item>com.cafedered.midban.entities.Order</item>
        <item>com.cafedered.midban.entities.OrderLine</item>
        <item>com.cafedered.midban.entities.Invoice</item>
        <item>com.cafedered.midban.entities.InvoiceLine</item>
        <item>com.cafedered.midban.entities.Route</item>
        <item>com.cafedered.midban.entities.RouteDetail</item>
        <item>com.cafedered.midban.entities.State</item>
        <item>com.cafedered.midban.entities.StockMove</item>
        <item>com.cafedered.midban.entities.StockPickingOut</item>
        <item>com.cafedered.midban.entities.AccountJournal</item>
        <item>com.cafedered.midban.entities.Account</item>
        <item>com.cafedered.midban.entities.AccountMoveLine</item>
        <item>com.cafedered.midban.entities.Voucher</item>
        <item>com.cafedered.midban.entities.VoucherLine</item>
        <item>com.cafedered.midban.entities.Task</item>
        <item>com.cafedered.midban.entities.Tax</item>
        <item>com.cafedered.midban.entities.WeekDay</item>
        <item>com.cafedered.midban.entities.Warehouse</item>
        <item>com.cafedered.midban.entities.Shop</item>
        <item>com.cafedered.midban.entities.PricelistPrices</item>
    </string-array>
    <string name="configuration_debug_enabled">false</string>
    <string name="actualAppVersion">1</string>
    <string name="transformer_error">Error en el transformer. Las propiedades no están bien anotadas?</string>
    <string name="cannot_save">No se ha podido guardar.</string>
    <string name="error_fragment_cannot_be_invoked">Error en la activity. El fragment indicado no puede ser iniciado.</string>
    <string name="save">Guardar</string>
    <string name="saved">Guardado</string>
    <string name="saving">Guardando...</string>
    <string name="send">Enviar</string>
    <string name="enter">Entrar</string>
    <string name="edit">Editar</string>
    <string name="home">Menú principal</string>
    <string name="confirm">Confirmar</string>
    <string name="cancel">Cancelar</string>
    <string name="mail_sent">Mensaje enviado</string>
    <string name="mail_not_sent">El mensaje no se ha podido enviar</string>
    <string name="todo_message">Funcionalidad aún no implementada.</string>
    <string name="midban_separator">|</string>
    <string name="filter">Filtrar</string>
    <string name="loading">Cargando...</string>
    <string name="clear_filters">Borrar filtros</string>
    <string name="add">Añadir</string>
    <string name="currency_symbol">€</string>
    <string name="pdf_currency_symbol">&#x80;</string>
    <string name="stock_not_available">El stock no está disponible</string>
    <string name="price_under_min_limit">El precio fijado está por debajo del precio mínimo</string>
    <string name="discount_not_valid">Descuento no válido</string>
    <string name="invalid_data_entered">Datos incorrectos.</string>
    <string name="cannot_create_pdf">No se puede crear el PDF.</string>
    <string name="cannot_open_another_order_until_cancel_or_complete_opened">No se puede crear otro pedido hasta completar o cancelar el actual.</string>
    <string name="synchronizing">Sincronizando...</string>
    <string name="not_available">No disp.</string>
    <string name="confirmation_dialog_generic_title">Confirmación</string>
    <string name="sure_to_delete">Confirme que desea borrar el elemento</string>
    <string name="deleted">Borrado</string>
    <string name="cannot_delete">No se ha podido borrar</string>
    <string name="delete">Borrar</string>
    <string name="quit">Cerrar</string>
    <string name="really_quit">¿Seguro que desea cerrar la aplicación?</string>
    <string name="fragment_configuration_protocol_openerp">Protocol</string>
    <string name="fragment_configuration_url_openerp">URL</string>
    <string name="fragment_configuration_port_openerp">Puerto</string>
    <string name="fragment_configuration_db_openerp">Nombre BDD</string>
    <string name="fragment_configuration_configuration_username">Usuario por defecto</string>
    <string name="activity_configuration_title">Configuración</string>
    <string name="activity_portada_title"></string>
    <string name="activity_portada_clientes">Clientes</string>
    <string name="activity_portada_pedidos">Pedido</string>
    <string name="activity_portada_catalogo">Catálogo</string>
    <string name="activity_portada_devoluciones">Devoluciones</string>
    <string name="activity_portada_cobros">Cobros</string>
    <string name="activity_portada_agenda">Agenda</string>
    <string name="activity_portada_reservas">Reservar</string>
    <string name="activity_portada_hoy">Hoy</string>
    <string name="activity_portada_sincronizar">Sincronizar</string>
    <string name="activity_portada_new_order_dialog">Nuevo pedido</string>
    <string name="activity_portada_incomes_dialog">Cobro a cliente</string>
    <string name="activity_portada_new_reservation_dialog">Nueva reserva</string>
    <string name="activity_login_username">Nombre de usuario</string>
    <string name="activity_login_password">Contraseña</string>
    <string name="activity_login_title">Identificación</string>
    <string name="activity_login_ok">Credenciales correctas</string>
    <string name="activity_login_ko">Credenciales incorrectas o el usuario no pertenece a la empresa</string>
    <string name="activity_login_midban_logo">Midban</string>
    <string name="hello_world">Hello world!</string>
    <string name="activity_partner_title">Clientes</string>
    <string name="fragment_partner_list_filtrar">Filtrar</string>
    <string name="fragment_partner_list_search_field_hint">Buscar...</string>
    <string name="partners_geolocalization">Geolocalizar clientes</string>
    <string name="filter_partners_dialog_types">Tipo...</string>
    <string name="filter_partners_dialog_cities">Localidad...</string>
    <string name="filter_partners_dialog_states">Provincia...</string>
    <string name="dialog_partner_filters_zip">Código postal</string>
    <string name="maps_partner_location_cannot_be_retrieved">No se puede obtener la localización del cliente. Probablemente es errónea.</string>
    <string name="activity_google_maps_title">Geolocalización Clientes</string>
    <string name="activity_synchronization_title">Sincronización</string>
    <string name="activity_synchronization_synchronize">SINCRONIZAR AHORA</string>
    <string name="fragment_synchronization_synchro_ok">Sincronización correcta</string>
    <string name="fragment_synchronization_synchro_ko">Error al sincronizar</string>
    <string name="fragment_synchronization_progress_bar_title">Sincronizar</string>
    <string name="fragment_synchronization_progress_bar_progress">Sincronizando...</string>
    <string name="activity_partner_detail_title">Ficha cliente</string>
    <string name="fragment_partner_detail_tab_card">Ficha</string>
    <string name="fragment_partner_detail_tab_invoices">Facturas</string>
    <string name="fragment_partner_detail_tab_history">Historial</string>
    <string name="fragment_partner_detail_tab_devolutions">Devoluciones</string>
    <string name="fragment_partner_detail_tab_deliverynote">Albaranes</string>
    <string name="fragment_partner_detail_tab_payments">Cobrar</string>
    <string name="fragment_partner_detail_tab_reservations">Reservado</string>
    <string name="fragment_partner_detail_tab_catalog">Catal.</string>
    <string name="fragment_partner_detail_tab_delivery_notes">Albaranes</string>
    <string name="fragment_partner_detail_header_favoritos">Favoritos</string>
    <string name="fragment_partner_detail_header_cita">Cita</string>
    <string name="fragment_partner_detail_header_cesta">Cesta</string>
    <string name="fragment_partner_detail_tab_card_typology">Tipología:</string>
    <string name="fragment_partner_detail_tab_card_invoice_address">Dirección de facturación:</string>
    <string name="fragment_partner_detail_tab_card_delivery_address">Dirección de entrega:</string>
    <string name="fragment_partner_detail_tab_card_contact_name">Contacto:</string>
    <string name="fragment_partner_detail_tab_card_phone">Teléfono:</string>
    <string name="fragment_partner_detail_tab_card_fax">Fax:</string>
    <string name="fragment_partner_detail_tab_card_email">Email:</string>
    <string name="fragment_partner_detail_tab_card_payment_mode">Modo de pago:</string>
    <string name="fragment_partner_detail_tab_card_account_payment_term">Plazo de pago:</string>
    <string name="synchronization_list_item_adapter_invoice">Facturas</string>
    <string name="synchronization_list_item_adapter_invoiceline">Líneas de facturas</string>
    <string name="synchronization_list_item_adapter_order">Pedidos</string>
    <string name="synchronization_list_item_adapter_orderline">Líneas de pedidos</string>
    <string name="synchronization_list_item_adapter_partner">Clientes</string>
    <string name="fragment_invoice_list_search_field_hint">Buscar...</string>
    <string name="fragment_invoice_list_filtrar">Filtrar</string>
    <string name="fragment_invoice_list_item_code">Código</string>
    <string name="fragment_invoice_list_item_date">Fecha</string>
    <string name="fragment_invoice_list_item_amount">Importe</string>
    <string name="fragment_invoice_list_item_state">Estado</string>
    <string name="fragment_invoice_send_invoice">Enviar factura</string>
    <string name="fragment_invoice_pay_invoice">Cobrar</string>
    <string name="dialog_partner_history_date_from">Fecha desde</string>
    <string name="dialog_partner_history_date_to">Fecha desde</string>
    <string name="dialog_partner_history_amount_less_than">Importe &lt;</string>
    <string name="dialog_partner_history_amount_more_than">Importe &gt;</string>
    <string name="dialog_task_filters_free">Cliente...</string>
    <string name="dialog_partner_delivery_note_date_from">Fecha desde</string>
    <string name="dialog_partner_delivery_note_date_to">Fecha desde</string>
    <string name="dialog_partner_delivery_note_amount_less_than">Importe &lt;</string>
    <string name="dialog_partner_delivery_note_amount_more_than">Importe &gt;</string>
    <string name="activity_portada_medios">Gestión de medios</string>
    <string name="ordenar_categoria">Ord. categoría</string>
    <string name="ordenar_alfabeticamente">Ord. alfabético</string>
    <string name="order_catalog">Ordenar</string>
</resources>