<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
   <item
      android:id="@+id/home_item"
      android:icon="@drawable/header_footer_home"
      app:showAsAction="ifRoom"
      android:orderInCategory="10"
      android:title="@string/home">
   </item>
   <item
       android:title="@string/order_catalog"
       android:id="@+id/portada_action_configuration"
       android:orderInCategory="100"
       app:showAsAction="always"
       android:icon="@drawable/sort_alphabetical">
      <menu >
         <item android:id="@+id/category_order" android:title="@string/ordenar_categoria" android:icon="@drawable/ic_action_accept_holo_dark"/>
         <item android:id="@+id/alphabetical_order" android:title="@string/ordenar_alfabeticamente" />
      </menu>
   </item>
</menu>
