<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.cafedered.midban.view.activities.TaskDetailActivity"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home_item"
        android:icon="@drawable/header_footer_home"
        android:orderInCategory="10"
        app:showAsAction="ifRoom"
        android:title="@string/home">
    </item>
    
    <item
      android:id="@+id/edit_item"
      android:icon="@drawable/header_footer_edit"
      app:showAsAction="ifRoom"
      android:orderInCategory="10"
      android:title="@string/edit">
   </item>

    <item
      android:id="@+id/delete_item"
      android:icon="@drawable/ic_action_discard"
      app:showAsAction="ifRoom"
      android:orderInCategory="10"
      android:title="@string/delete">
   </item>

</menu>
