<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/midban_background"
    android:padding="@dimen/activity_horizontal_margin" >

    <org.droidparts.widget.ClearableEditText         android:drawableRight="@drawable/general_filtrar_borrar"         android:drawablePadding="12dp"
        android:id="@+id/dialog_task_filters_editext_free"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_task_filters_free"
        android:paddingRight="@dimen/activity_horizontal_margin" />

    <Button
        android:id="@+id/dialog_task_filters_button_apply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/filter" 
        android:layout_margin="@dimen/activity_horizontal_margin"/>
    
    <TextView android:id="@+id/dialog_task_filters_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/clear_filters"
        android:drawableLeft="@drawable/general_filtrar_borrar" 
        android:drawablePadding="5dp"/>

</LinearLayout>