<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.cafedered.midban.fragments.InvoiceFragment" >

    <LinearLayout
        android:id="@+id/search_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin" >

        <org.droidparts.widget.ClearableEditText         android:drawableRight="@drawable/general_filtrar_borrar"         android:drawablePadding="12dp"
            android:id="@+id/fragment_invoice_list_search_field"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:drawableStart="@drawable/midban_button_search"
            android:hint="@string/fragment_invoice_list_search_field_hint" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/midban_separator"
            android:textColor="@color/midban_secondary_text_color" />

        <TextView
            android:id="@+id/fragment_partner_invoice_filter_tv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/midban_spinner_icon"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/fragment_invoice_list_filtrar" />
    </LinearLayout>

    <View
        android:id="@+id/fragment_invoice_separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/search_bar"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@color/midban_secondary_text_color" />

    <LinearLayout
        android:id="@+id/fragment_invoice_list_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fragment_invoice_separator"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:padding="@dimen/activity_vertical_margin" >

        <View
            android:id="@+id/fragment_invoice_list_item_check"
            android:layout_width="0dp"
            android:layout_height="10dp"
            android:layout_marginLeft="@dimen/separator_margin"
            android:layout_weight="0.2"
            android:gravity="center_horizontal"
            android:textColor="@color/midban_secondary_text_color" />

        <TextView
            android:id="@+id/fragment_invoice_list_item_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/separator_margin"
            android:layout_weight="1.3"
            android:gravity="center_horizontal"
            android:text="@string/fragment_invoice_list_item_code"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/fragment_invoice_list_item_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/separator_margin"
            android:layout_weight="1.2"
            android:gravity="center_horizontal"
            android:text="@string/fragment_invoice_list_item_date"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/fragment_invoice_list_item_amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/separator_margin"
            android:layout_weight="1.2"
            android:gravity="center_horizontal"
            android:text="@string/fragment_invoice_list_item_amount"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/fragment_invoice_list_item_state"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/separator_margin"
            android:layout_weight="0.8"
            android:gravity="center_horizontal"
            android:text="@string/fragment_invoice_list_item_state"
            android:textStyle="bold" />
    </LinearLayout>

    <ListView
        android:id="@+id/fragment_invoice_list_listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="60dp"
        android:layout_below="@+id/fragment_invoice_list_header" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:visibility="gone"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/fragment_invoice_send_invoice_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/MidbanButtonSecondary"
            android:gravity="center"
            android:text="@string/fragment_invoice_send_invoice"
            android:textSize="@dimen/h3" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="0.03" />

        <Button
            android:id="@+id/fragment_invoice_pay_invoice_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/fragment_invoice_pay_invoice"
            android:textSize="@dimen/h3" />
    </LinearLayout>

</RelativeLayout>